unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Manager_ID__c</fullName>
        <formula>Account.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_User__c</fullName>
        <description>Updated from PROCESS BUILDER process:&quot;Community: Copy Language to contact&quot;</description>
        <label>Language User</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_420,FIND(&apos;.com&apos;,$Api.Partner_Server_URL_420)) + &apos;com/servlet/servlet.ImageServer?id=&apos;+ 
$Setup.System_Settings__c.Logo_Id__c+ 
&apos;&amp;oid=&apos; 
+$Setup.System_Settings__c.Org_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is updated from InfoCheck_Schedulable class</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>